<resources>
    <string name="app_name">Gemini Energy Solutions</string>

    <!-- Warning | Error Message -->
    <string name="unknown_error">Unknown Error</string>

    <!-- Menu -->
    <string name="menu_create_audit">Create Audit</string>
    <string name="menu_create_zone">Create Zone</string>
    <string name="menu_create_audit_scope_parent">Create Audit Entity</string>

    <!-- Fragment Audit Dialog -->
    <string name="audit_id">Audit Id</string>
    <string name="audit_tag">Audit Tag</string>
    <string name="audit_save">Save</string>
    <string name="audit_cancel">Cancel</string>
    <string name="create_audit">Create Audit</string>

    <!-- Fragment Audit Scope Parent Dialog -->
    <string name="scope_parent_name">Audit Entity Name</string>
    <string name="scope_parent_save">Save</string>
    <string name="scope_parent_cancel">Cancel</string>
    <string name="scope_parent_create_entity">Create Audit Entity</string>
    <string name="selected_item">Selected Item</string>

    <!-- Fragment Zone Dialog -->
    <string name="zone_tag">Zone Tag</string>
    <string name="zone_save">Save</string>
    <string name="zone_cancel">Cancel</string>
    <string name="create_zone">Create Zone</string>

    <string name="navigation_drawer_header_title">Gemini Energy</string>

    <plurals name="watering_needs_suffix">
        <item quantity="one">every day</item>
        <item quantity="other">every %d days</item>
    </plurals>

    <plurals name="watering_next_suffix">
        <item quantity="one">water tomorrow.</item>
        <item quantity="other">water in %d days.</item>
    </plurals>

</resources>
