<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dia_zone_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:id="@+id/edt_create_zone_tag"
        style="@style/EditTextCreateMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/zone_tag" />

    <Button
        android:id="@+id/btn_save_zone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zone_save" />

    <Button
        android:id="@+id/btn_cancel_zone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zone_cancel" />

</LinearLayout>