<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dia_audit_fragment"
    android:layout_gravity="center_vertical"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edt_create_audit_tag"
        android:layout_width="match_parent"
        android:hint="@string/audit_tag"
        style="@style/EditTextCreateMessage"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_save_audit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/audit_save" />

    <Button
        android:id="@+id/btn_cancel_audit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/audit_cancel" />

</LinearLayout>