<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dia_audit_fragment"
    android:layout_gravity="center_vertical"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edt_create_audit_scope_parent_name"
        android:layout_width="match_parent"
        android:hint="@string/scope_parent_name"
        style="@style/EditTextCreateMessage"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/spin_audit_scope"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_save_scope"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scope_parent_save" />

    <Button
        android:id="@+id/btn_cancel_scope"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scope_parent_cancel" />

</LinearLayout>